# ROS2_rUBot_mecanum_ws

Documentation/: 06_Web_control.md
Documentation/Files/Install_robot/Local_service/: Instructions_install_service.md
src/my_robot_bringup/launch/: my_robot_bringup_sw.launch.xml  my_robot_bringup_sw2.launch.xml
src/my_robot_bringup/models/model1/: model.sdf
src/my_robot_bringup/worlds/: group2_custom.world  group2_custom2.world
src/my_robot_control/: setup.py
src/my_robot_control/launch/: my_robot_selfcontrol.launch2.xml
src/my_robot_control/my_robot_control/: my_robot_controlP2.py  my_robot_lidar_test.py  my_robot_lidar_test_rUBot.py
src/my_robot_description/: CMakeLists.txt
src/my_robot_description/urdf/rubot/: rubot_mecanum_custom.urdf  rubot_mecanum_custom2.urdf  rubot_mecanum_custom2_lidar.urdf  rubot_mecanum_custom_lida.urdf  rubot_mecanum_custom_lidar.urdf
